# ----

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DELIVERY_WIN7.md  ORTOOLS_WIN7_SPIKE.md  README.md  app.py  app_new_ui.py  build_win7_installer.bat  build_win7_onedir.bat  check_manual_layout.py  config.py  pyproject.toml  pyrightconfig.gate.json  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_smoke_full_e2e.bat  run_smoke_phase5.bat  run_smoke_phase7.bat  run_smoke_phase8.bat  run_smoke_phase9.bat  schema.sql  stage_chrome109_to_dist.bat  start.bat  start_new_ui.bat  validate_dist_exe.py  verify_manual_styles.py  初步策划方案修改意见v2.md
.limcode/: README.md  progress.md
.playwright-cli/: page-2026-05-02T06-35-01-062Z.yml  page-2026-05-02T06-35-46-022Z.yml  page-2026-05-02T06-36-07-084Z.yml  page-2026-05-02T06-36-32-698Z.yml  page-2026-05-02T06-36-56-893Z.yml
.windsurf/: README.md
assets/: 启动_排产系统_Chrome.bat
audit/: README.md
desktop/: __init__.py
evidence/: README.md  manual_layout_verification.md
installer/: README_WIN7_INSTALLER.md  SYNC_CHECKLIST.md  aps_win7.iss  aps_win7_chrome.iss  aps_win7_legacy.iss
plugins/: README.md  ortools_probe_plugin.py  pandas_backend_plugin.py
scripts/: convert_rotary_shell_unit_excel.py  run_quality_gate.py  sync_debt_ledger.py
templates/: base.html  dashboard.html  error.html  error_base.html
templates_excel/: 人员专属工作日历.xlsx  人员基本信息.xlsx  人员设备关联.xlsx  供应商配置.xlsx  回转壳体单元产品数据.xlsx  工作日历.xlsx  工种配置.xlsx  批次信息.xlsx  设备人员关联.xlsx  设备信息.xlsx  零件工序工时.xlsx  零件工艺路线.xlsx
tests/: ERRORLEVEL  benchmark_fjsp.py  (+438 more)
(+1075 files in other folders)
